--- a/css/app.css
+++ b/css/app.css
@@ -898,7 +898,7 @@ body.home .dcc-nav {
     animation-delay: 20s;
     opacity: 0;
 }
-.zep-img {height: 121px;}
+.zep-img {height: 121px; padding-right: 10px;}
 .zep-img img {height: 121px;}
 .zep-led {width: 100%; text-align: center;}
 .zep-led img {width: 50%;}
