--- a/css/app.css
+++ b/css/app.css
@@ -239,7 +239,7 @@ body.home .logo {
 	-webkit-transform:translate3d(0,0,0);
 	transform:translate3d(0,0,0);
 }
-.mainmenu.active .menu-items {
+.mainmenu.active {
 	-webkit-box-shadow: 0 0 8px #000;
 	box-shadow: 0 0 8px #000;
 }
@@ -518,7 +518,7 @@ span.lines {
 	color: #fff;
 }
 .dcc-socials ul {
-	margin: 0;
+	margin: 0 0 15px;
 	display: block;
 }
 .dcc-socials li {
@@ -535,6 +535,11 @@ span.lines {
 	background: #fff;
 	color: #000;
 	font-size: 18px;
+}
+.copyright {
+	color:#fff;
+	font-size:14px;
+	line-height: 1.4;
 }
 
 /* Site Navigation (next/prev) page */
@@ -925,6 +930,17 @@ body.home .dcc-nav {
     animation: blink 0.7s infinite;
 }
 
+.normal-typed {
+
+}
+.skip-typed {
+	display: none;
+}
+a.skip-typed-button {
+	display: inline-block; color:#fff; font-size:16px;
+	animation:blinking 10s infinite;
+}
+
 #dcc-lobby h2 {
 	color: #fff;
 	font-size: 38px;
@@ -1243,7 +1259,8 @@ a.btn-begin {
 	width: 33%;
 	height: auto;
 	min-height:50%;
-	margin-top: -12%;
+	top:auto;
+	bottom:0;
 	left: 13%;
 }
 .dcc-space .planet.planet-creative {
@@ -1483,7 +1500,15 @@ a.btn-begin {
 }
 
 /* Tablet iPad Landscape and Normal Screen Media Queries */
-@media only screen and (max-width: 1024px) {}
+@media only screen and (max-width: 1024px) {
+	.logo {
+		top: 10px;
+		left: 15px;
+	}
+	.menu-items { overflow-y:auto; min-height: 100%; position: static; padding-top:0; margin-top:80px;}
+	.top-nav { position: relative; top:auto; left:0; margin-top:0;}
+	.dcc-socials { position: relative; padding:25px 0;}
+}
 
 /* Tablet iPad and Portrait and Medium Screen Media Queries */
 @media only screen and (max-width: 768px) and (orientation: portrait) {}
@@ -1504,10 +1529,6 @@ a.btn-begin {
 		font-size: 12px;
 		color: #fff;
 		margin: 0 0 10px;
-	}
-	.logo {
-		top: 10px;
-		left: 15px;
 	}
 	a.btn-begin {
 		transform: scale(.8);
