--- a/css/app.css
+++ b/css/app.css
@@ -598,6 +598,7 @@ body.home .dcc-nav {
 
 /* Container & Content Section */
 #content {
+	touch-action:none;
 	position: fixed;
 	z-index: 20;
 	left: 0;
