--- a/css/app.css
+++ b/css/app.css
@@ -134,6 +134,140 @@
 		background-position: right center;
 	}
 }
+
+/* Efek sprite animasi smoke */
+@-webkit-keyframes smoke {
+	0% {
+		background-position: left center;
+		opacity: 0;
+	}
+	1% {
+		opacity: 1
+	}
+	99% {
+		opacity: 1;
+	}
+	100% {
+		background-position: right center;
+		opacity: 0;
+	}
+}
+@keyframes smoke {
+	0% {
+		background-position: left center;
+		opacity: 0;
+	}
+	1% {
+		opacity: 1;
+	}
+	99% {
+		opacity: 1;
+	}
+	100% {
+		background-position: right center;
+		opacity: 0;
+	}
+}
+/* Efek sprite animasi fire */
+@-webkit-keyframes fire {
+	0% {
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+	100% {	
+		-webkit-transform:translate3d(0,100px,0);
+		transform:translate3d(0,100px,0);
+	}
+}
+@keyframes fire {
+	0% {
+		transform:translate3d(0,0,0);
+	}
+	100% {
+		transform:translate3d(0,100px,0);
+	}
+}
+
+/* Efek sprite animasi shake */
+@-webkit-keyframes shake {
+	0% {
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+	25% {	
+		-webkit-transform:translate3d(2px,-1px,0);
+		transform:translate3d(2px,-1px,0);
+	}
+	50% {	
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+	75% {	
+		-webkit-transform:translate3d(-2px,1px,0);
+		transform:translate3d(-2px,1px,0);
+	}
+	100% {	
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+}
+@keyframes shake {
+	0% {
+		transform:translate3d(0,0,0);
+	}
+	25% {	
+		transform:translate3d(3px,0,0);
+	}
+	50% {	
+		transform:translate3d(0,0,0);
+	}
+	75% {	
+		transform:translate3d(-3px,0,0);
+	}
+	100% {	
+		transform:translate3d(0,0,0);
+	}
+}
+@-webkit-keyframes shake2 {
+	0% {
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+	25% {	
+		-webkit-transform:translate3d(2px,-1px,0);
+		transform:translate3d(2px,-1px,0);
+	}
+	50% {	
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+	75% {	
+		-webkit-transform:translate3d(-2px,1px,0);
+		transform:translate3d(-2px,1px,0);
+	}
+	100% {	
+		-webkit-transform:translate3d(0,0,0);
+		transform:translate3d(0,0,0);
+	}
+}
+@keyframes shake2 {
+	0% {
+		transform:translate3d(0,0,0);
+	}
+	25% {	
+		transform:translate3d(3px,0,0);
+	}
+	50% {	
+		transform:translate3d(0,0,0);
+	}
+	75% {	
+		transform:translate3d(-3px,0,0);
+	}
+	100% {	
+		transform:translate3d(0,0,0);
+	}
+}
+
 @-webkit-keyframes blink{
   0% { opacity:1; }
   50% { opacity:0; }
@@ -640,9 +774,11 @@ body.home .dcc-nav {
 .dcc-container.launched {
 	-webkit-transition-property:transform;
 	-webkit-transition-duration:8s;
+	-webkit-transition-delay:4s;
 	-webkit-transition-timing-function:cubic-bezier(.48, 0, .8, .28);
 	transition-property:transform;
 	transition-duration:8s;
+	transition-delay:4s;
 	transition-timing-function:cubic-bezier(.48, 0, .8, .28);
 }
 .dcc-container.skip-transition {
@@ -779,7 +915,7 @@ body.home .dcc-nav {
 	-webkit-border-radius: 1000px;
 	border-radius: 1000px;
 	-webkit-animation: ripple 1s infinite ease-in-out;
-	animation: ripple 2s infinite ease;
+	animation: ripple 2s infinite ease ease-in-out;
 }
 .rippling:after {
 	display: block;
@@ -796,7 +932,7 @@ body.home .dcc-nav {
 	-webkit-border-radius: 1000px;
 	border-radius: 1000px;
 	-webkit-animation: inner-ripple 1s infinite ease-in-out;
-	animation: inner-ripple 2s .5s infinite ease;
+	animation: inner-ripple 2s .5s infinite ease-in-out;
 }
 
 /* Homepage */
@@ -1017,6 +1153,10 @@ a.btn-begin {
 	display: block;
 }
 
+.flex-video {height:0;overflow:hidden;padding-bottom:65.5%;padding-top:1.5625rem;position:relative}
+.flex-video iframe,.flex-video object,.flex-video embed,.flex-video video{height:100%;position:absolute;top:0;width:100%;left:0}.keystroke,kbd{background-color:#ededed;border-color:#ddd;color:#222;border-style:solid;border-width:1px;font-family:"Consolas","Menlo","Courier",monospace;font-size:inherit;margin:0;padding:0.125rem 0.25rem 0;border-radius:4px}
+
+
 /* Team Buttons & Sliding Popup */
 .dragon {
 	position: absolute;
@@ -1231,17 +1371,75 @@ a.btn-begin {
 .rocket {
 	position: relative;
 }
+.rocket-body {
+	position: relative; z-index: 5;
+	-webkit-animation:shake .2s infinite;
+	animation:shake .2s infinite;
+}
 .rocket-body img {
 	width:100%;
 }
 .rocket-holder.active {
-	-webkit-transform: translate3d(0,-2648px,0) scale(0);
-	transform: translate3d(0,-2648px,0) scale(0);
 	opacity: .9;
 	-webkit-transition: all 7.5s cubic-bezier(.98, 0, .9, .88);
 	transition: all 7.5s cubic-bezier(.98, 0, .9, .88);
 	-webkit-transition-delay:3s;
 	transition-delay:3s;
+}
+.rocket-fire {
+	bottom:0; 
+	position: absolute;
+	z-index: 3;
+	left:50%; margin-left:-50px;
+	-webkit-animation:shake .2s infinite;
+	animation:shake .2s infinite;
+}
+.fire-animation {
+	width:100px;
+	height:300px;
+	background-size:1000px 300px;
+	background:url(../img/rocket-fire.png) no-repeat left top;
+	transform:translate3d(0,-300px,0);
+}
+.rocket-smoke {	
+	position: absolute;
+	left:50%;
+	z-index: 7;
+	margin-left:-600px;
+	bottom:0;
+}
+.smoke-animation {
+	display: block;
+	width:1200px;
+	height:300px;
+	background-size:12000px 300px;
+	background:url(../img/rocket-smoke.png) no-repeat left top;
+	display: none;
+	opacity: 0;
+}
+.rocket-holder.active .rocket-body {
+	-webkit-animation:shake2 .1s infinite;
+	animation:shake2 .1s infinite;
+}
+.rocket-holder.active .rocket-fire {
+	-webkit-animation:shake2 .1s infinite;
+	animation:shake2 .1s infinite;
+}
+.rocket-holder.active .fire-animation {
+	-webkit-animation:2s steps(9, end) 0s normal none infinite running mascot;
+	animation:2s steps(9, end) 0s normal none infinite running mascot;
+	transform:translate3d(0,120px,0);
+	transition:transform ease 3s;
+	transition-delay:3s;
+}
+.rocket-holder.active .smoke-animation {
+	display: block;
+	-webkit-animation:smoke 1s steps(9) infinite;
+	animation:smoke 1s steps(9) infinite;
+	-webkit-animation-iteration-count:1;
+	animation-iteration-count:1;
+	-webkit-animation-delay:1s;
+	animation-delay:1s;
 }
 .btn-launch {
 	width: 102px;
