--- a/css/app.css
+++ b/css/app.css
@@ -1783,7 +1783,21 @@ a.btn-begin {
 }
 
 /* Tablet iPad and Portrait and Medium Screen Media Queries */
-@media only screen and (max-width: 768px) and (orientation: portrait) {}
+@media only screen and (max-width: 640px) and (orientation: portrait) {
+	#lobby-content {
+		width:600px;
+		left:50%; margin-left:-300px;
+		top:20%;
+	}
+	#dcc-lobby p {
+		font-size:22px;
+		line-height: 1.6;
+		margin:0 0 25px;
+	}
+	#dcc-lobby h2 {
+		font-size:48px;
+	}
+}
 
 /* Mobile Down and Small Screen Media Queries */
 @media only screen and (max-width: 640px) {
@@ -1791,16 +1805,6 @@ a.btn-begin {
 		width:240px;
 		margin-left:-120px;
 		height:104.64px;
-	}
-	#dcc-lobby h2 {
-		color:#fff;
-		font-size:22px;
-		margin:0 0 10px;
-	}
-	#dcc-lobby p {
-		font-size: 12px;
-		color: #fff;
-		margin: 0 0 10px;
 	}
 	a.btn-begin {
 		transform: scale(.8);
@@ -1954,6 +1958,43 @@ a.btn-begin {
 	}
 	.drag-nav-outspace .drag-prev,.drag-nav-outspace .drag-next{
 		display: none;
+	}
+	.menu-toggle {
+		position: fixed;
+		-webkit-transform-origin:0 50%;
+		-webkit-transform:scale(0.8);
+		transform-origin:0 50%;
+		transform:scale(0.8);
+		top:6px;
+		margin-top:0;
+	}
+	.mainmenu.active .menu-toggle {
+		left:0; right:auto;
+	}
+}
+
+@media only screen and (max-width:600px){
+		#dcc-lobby h2 {
+		color:#fff;
+		font-size:24px;
+		margin:0 0 10px;
+	}
+	#dcc-lobby p {
+		font-size: 16px;
+		color: #fff;
+		margin: 0 0 10px;
+	}
+}
+@media only screen and (max-height:640px){
+		#dcc-lobby h2 {
+		color:#fff;
+		font-size:22px;
+		margin:0 0 10px;
+	}
+	#dcc-lobby p {
+		font-size: 12px;
+		color: #fff;
+		margin: 0 0 10px;
 	}
 }
 
