--- a/css/app.css
+++ b/css/app.css
@@ -1971,8 +1971,8 @@ a.btn-begin {
 	.mainmenu.active .menu-toggle {
 		left:0; right:auto;
 	}
-	.logo { left:64px; width:40px; top:14px;}
-}
+	.logo { left:64px; width:40px; top:14px; pointer-events:none; touch-event:none;}
+} 
 
 @media only screen and (max-width:600px){
 		#dcc-lobby h2 {
