--- a/css/app.css
+++ b/css/app.css
@@ -712,6 +712,7 @@ span.lines {
 	border-radius: 1000px;
 	background: #000;
 	color: #fff;
+	-webkit-box-shadow: 0 0 3px #000;
 	box-shadow: 0 0 3px #000;
 }
 .dcc-nav .down a {
@@ -876,9 +877,8 @@ body.home .dcc-nav {
 	background:#fff;
 	color:#fff;
 	background:rgba(255,255,255,.2);
-	-webkit-box-shadow:0 0 8px rgba(0,0,0,.85);
-	box-shadow:0 0 8px rgba(0,0,0,.85);
-	-webkit-border-radius:1000px;
+	-webkit-box-shadow: 0 0 3px #000;
+	box-shadow: 0 0 3px #000;
 	border-radius:1000px;
 	bottom:90px;
 	cursor: pointer;
@@ -1203,7 +1203,7 @@ a.btn-begin {
 	text-align: center;
 	line-height: 1;
 	font-family: sans-serif;
-	box-shadow: 0 0 8px #000;
+	box-shadow: 0 0 3px #000;
 	position: relative;
 	z-index: 9;
 	transform-origin: 50% 50%;
